Bug 1122447 - handle OMX dequeue input buffer error. r=ajones